properly(...) delete closed bank accs